--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -1,30 +1,32 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".MainActivity" >
+    tools:context=".MainActivity"
+    android:background="@drawable/background" android:weightSum="100" >
 
-    <Button
+    <include layout="@layout/main_header" />
+    
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" >
+
+    <!--  <Button
         android:id="@+id/SetButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
         android:layout_alignParentTop="true"
-        android:layout_marginRight="70dp"
-        android:layout_marginTop="54dp"
-        android:text="Button" />
+        android:text="Button" /> -->
 
     <Button
         android:id="@+id/btnShow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignRight="@+id/SetButton"
-        android:layout_below="@+id/SetButton"
-        android:layout_marginTop="73dp"
-        android:text="Button" />
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:background="@drawable/button_selection" />
 
-</RelativeLayout>
+    </RelativeLayout>
+
+</FrameLayout>
