--- a/res/layout/main_header.xml
+++ b/res/layout/main_header.xml
@@ -1,23 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
     android:orientation="vertical" >
-
+    
     <ImageView
         android:id="@+id/imageView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/orange_strip" />
-
+    
     <Button
-        android:id="@+id/btnBack"
+        android:id="@+id/SetButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="10dip"
-        android:text="Back"
+        android:layout_gravity="right"
+        android:text="Settings"
         android:textColor="#FFFFFF"
         android:background="@drawable/small_strip"
          />
+    
+
+    
 
 </FrameLayout>
