--- a/res/layout/settings.xml
+++ b/res/layout/settings.xml
@@ -4,6 +4,10 @@
     android:layout_width="fill_parent"
     android:layout_height="match_parent" android:weightSum="100" >
 
+    <include
+        android:layout_height="60dp"
+        layout="@layout/header" />
+
     <TableRow >
     <EditText
         android:id="@+id/Number1"
