--- a/res/layout/main_header.xml
+++ b/res/layout/main_header.xml
@@ -14,8 +14,9 @@
         android:id="@+id/SetButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_margin="10dip"
         android:layout_gravity="right"
+        android:layout_marginTop="15dp"
+        android:layout_marginRight="7dp"
         android:text="Settings"
         android:textColor="#FFFFFF"
         android:background="@drawable/small_strip"
