--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -9,7 +9,7 @@
     
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent" >
+        android:layout_height="382dp" android:layout_marginTop="75dip" >
 
     <!--  <Button
         android:id="@+id/SetButton"
@@ -23,8 +23,9 @@
         android:id="@+id/btnShow"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_centerVertical="true"
+        android:layout_marginBottom="54dp"
         android:background="@drawable/button_selection" />
 
     </RelativeLayout>
