--- a/res/layout/main_header.xml
+++ b/res/layout/main_header.xml
@@ -12,14 +12,14 @@
     
     <Button
         android:id="@+id/SetButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_width="30dip"
+        android:layout_height="30dip"
         android:layout_gravity="right"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="25dp"
         android:layout_marginRight="7dp"
-        android:text="Settings"
         android:textColor="#FFFFFF"
-        android:background="@drawable/small_strip"
+        android:background="@drawable/setting_button"
+        
          />
     
 
