--- a/res/layout/messagebox.xml
+++ b/res/layout/messagebox.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"  >
+    android:orientation="vertical" android:background="@drawable/backgd"  >
 
     <include
         android:layout_height="60dp"
