Smart Life Saver Functionality added

--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -30,4 +30,10 @@
 
     </RelativeLayout>
 
+    <Button
+        android:id="@+id/btnService"
+        android:layout_width="333dp"
+        android:layout_height="wrap_content"
+        android:text="switch on accident detection" />
+
 </FrameLayout>
