--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -6,34 +6,34 @@
     android:background="@drawable/background" android:weightSum="100" >
 
     <!-- <include layout="@layout/main_header" /> -->
-    
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="382dp" android:layout_marginTop="75dip" >
-
-    <!--  <Button
-        android:id="@+id/SetButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentRight="true"
-        android:layout_alignParentTop="true"
-        android:text="Button" /> -->
-
-    <Button
-        android:id="@+id/btnShow"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="54dp"
-        android:background="@drawable/button_selection" />
-
-    </RelativeLayout>
 
     <Button
         android:id="@+id/btnService"
         android:layout_width="333dp"
         android:layout_height="wrap_content"
         android:text="switch on accident detection" />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="408dp"
+        android:layout_marginTop="55dip" >
+
+        <Button
+            android:id="@+id/btnShow"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_below="@+id/btnSafe"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="14dp"
+            android:background="@drawable/button_selection" />
+
+        <Button
+            android:id="@+id/btnSafe"
+            android:layout_width="200dp"
+            android:layout_height="200dp"
+            android:layout_alignLeft="@+id/btnShow"
+            android:layout_alignParentTop="true"
+            android:background="@drawable/green" />
+    </RelativeLayout>
 
 </FrameLayout>
