--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -22,18 +22,20 @@
             android:id="@+id/btnShow"
             android:layout_width="200dp"
             android:layout_height="200dp"
-            android:layout_below="@+id/btnSafe"
+            android:layout_alignParentTop="true"
             android:layout_centerHorizontal="true"
-            android:layout_marginTop="14dp"
-            android:background="@drawable/button_selection" />
+            android:onClick="onClick"
+            android:background="@drawable/panic_unpressed" />
 
         <Button
             android:id="@+id/btnSafe"
             android:layout_width="200dp"
             android:layout_height="200dp"
             android:layout_alignLeft="@+id/btnShow"
-            android:layout_alignParentTop="true"
-            android:background="@drawable/green" />
+            android:layout_below="@+id/btnShow"
+            android:onClick="onClick"
+            android:background="@drawable/ok_unpressed" />
+
     </RelativeLayout>
 
 </FrameLayout>
