--- a/res/layout/activity_accident_warning.xml
+++ b/res/layout/activity_accident_warning.xml
@@ -6,11 +6,7 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context=".AccidentWarning" >
-
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+    tools:context=".AccidentWarning" 
+    android:background="@drawable/backgroud">
 
 </RelativeLayout>
