--- a/res/layout/messiah_contacts.xml
+++ b/res/layout/messiah_contacts.xml
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="center_vertical"
     android:orientation="horizontal" >
 
     <TextView
         android:id="@+id/tvName"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="10dp"
+        android:layout_weight="0.8"
         android:text="Medium Text"
         android:textAppearance="?android:attr/textAppearanceMedium" />
 
@@ -15,12 +18,14 @@
         android:id="@+id/IVDial"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="0.1"
         android:src="@drawable/phone_icon" />
 
     <ImageView
         android:id="@+id/IVEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_weight="0.1"
         android:src="@drawable/edit_icon" />
 
 </LinearLayout>
