--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -10,15 +10,16 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="0.1"
+      
         android:gravity="center"
+        android:paddingTop="10dp"
         android:orientation="vertical" >
 
         <ImageView
             android:id="@+id/imageView1"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="10dp"
+            
             android:src="@drawable/icon2_filled" />
     </LinearLayout>
 
