Changes for Contact Activity
deletion , addition and speed dial in contacts
contact selection UI
Welcome screen linked with Contact selection UI

--- a/res/menu/main_contactview.xml
+++ b/res/menu/main_contactview.xml
@@ -5,6 +5,6 @@
         android:orderInCategory="100"
         android:showAsAction="always"
         android:icon="@drawable/ic_action_accept"
-        android:title="Logout"/>
+        android:title="Done"/>
 
 </menu>
