--- a/res/layout/contactview_listitem.xml
+++ b/res/layout/contactview_listitem.xml
@@ -1,34 +1,34 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:id="@+id/RelativeLayout1"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/LinearLayout2"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical" >
+    android:orientation="horizontal"
+     android:weightSum="1"
+     >
 
     <CheckBox
         android:id="@+id/cbContact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="14dp"
-        android:layout_marginTop="10dp" />
+        android:layout_marginBottom="20dp" />
 
     <ImageView
         android:id="@+id/ivContact"
         android:layout_width="50dp"
         android:layout_height="50dp"
-        android:layout_alignParentTop="true"
-        android:layout_toRightOf="@+id/cbContact"
+        android:paddingTop="5dp"
+         android:layout_weight="0.05"
         android:src="@drawable/download" />
 
     <TextView
         android:id="@+id/tvContact"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBaseline="@+id/cbContact"
-        android:layout_alignBottom="@+id/cbContact"
-        android:layout_centerHorizontal="true"
+         android:layout_weight="0.9"
+         android:paddingTop="10dp"
+         android:textSize="25sp"
+         android:textColor="#000000"
         android:text="Contact Name" />
 
-</RelativeLayout>
+</LinearLayout>
