--- a/res/layout/messiah_contacts.xml
+++ b/res/layout/messiah_contacts.xml
@@ -3,8 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center_vertical"
-    android:weightSum="1"
-    android:orientation="horizontal" >
+    android:orientation="horizontal"
+    android:weightSum="1" >
 
     <TextView
         android:id="@+id/tvName"
@@ -26,7 +26,6 @@
         android:id="@+id/IVEdit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-      
         android:layout_weight="0.05"
         android:src="@drawable/edit_icon" />
 
