--- a/res/layout/messiah_registertion.xml
+++ b/res/layout/messiah_registertion.xml
@@ -113,7 +113,7 @@
             android:id="@+id/btnRegister"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:background="#2c3e50"
+           android:background="@drawable/lengthy_button_selection"
             android:text="Register >"
             android:textColor="#FFFFFF"
             android:textSize="20sp" />
